Fixing spacing on round over page

--- a/src/public/css/drawStyle.css
+++ b/src/public/css/drawStyle.css
@@ -191,7 +191,9 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
+  max-height: 100%;
   background-color: #55609b;
+  overflow-y: auto;
   z-index: 10000;
   display: flex;
   flex-direction: column;
@@ -215,7 +217,7 @@ body {
   border: 2px solid #000000;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 10px; /* Add margin between sections */
+  margin-bottom: 5px; /* Add margin between sections */
 }
 
 #prevSetButton,
@@ -429,22 +431,6 @@ body {
 #nextRoundButton {
   margin: 5px 10px; /* Adds vertical margin and more horizontal margin */
 }
-
-/* #chatButton {
-  background-color: #28a745;
-  border-color: #28a745;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  z-index: 10001;
-}
-
-#chatButton:hover {
-  background-color: #218838;
-  border-color: #1e7e34;
-} */
 
 #chatContainer {
   z-index: 10002;
